fix use jdk11 run
Signed-off-by: Smliexx <msmliexx1@gmail.com>